; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-bcm2835.c_bcm2835_i2c_finish_transfer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-bcm2835.c_bcm2835_i2c_finish_transfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm2835_i2c_dev = type { i64, i32*, i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcm2835_i2c_dev*)* @bcm2835_i2c_finish_transfer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcm2835_i2c_finish_transfer(%struct.bcm2835_i2c_dev* %0) #0 {
  %2 = alloca %struct.bcm2835_i2c_dev*, align 8
  store %struct.bcm2835_i2c_dev* %0, %struct.bcm2835_i2c_dev** %2, align 8
  %3 = load %struct.bcm2835_i2c_dev*, %struct.bcm2835_i2c_dev** %2, align 8
  %4 = getelementptr inbounds %struct.bcm2835_i2c_dev, %struct.bcm2835_i2c_dev* %3, i32 0, i32 3
  store i32* null, i32** %4, align 8
  %5 = load %struct.bcm2835_i2c_dev*, %struct.bcm2835_i2c_dev** %2, align 8
  %6 = getelementptr inbounds %struct.bcm2835_i2c_dev, %struct.bcm2835_i2c_dev* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.bcm2835_i2c_dev*, %struct.bcm2835_i2c_dev** %2, align 8
  %8 = getelementptr inbounds %struct.bcm2835_i2c_dev, %struct.bcm2835_i2c_dev* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.bcm2835_i2c_dev*, %struct.bcm2835_i2c_dev** %2, align 8
  %10 = getelementptr inbounds %struct.bcm2835_i2c_dev, %struct.bcm2835_i2c_dev* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
